# json-glib

./: config.h.meson  meson.build
json-glib/: json-parser.c  meson.build
json-glib/tests/: meson.build
